--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\QualiZeal\AppData\Local\Temp\testng-eclipse-488590406\testng-customsuite.xml</span>
+                    <span>C:\Users\QualiZeal\AppData\Local\Temp\testng-eclipse--306770209\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.automationtesting.demo.NewTest" class="method navigator-link" hash-for-method="f">f</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.automationtesting.demo.NewTest" class="method navigator-link" hash-for-method="register(Bhushanakumari, Kattupalli, kattupalli.bhushanakumari@qualizeal.com, Female, 7680018388, 18-May-2002...)">register(Bhushanakumari, Kattupalli, kattupalli.bhushanakumari@qualizeal.com, Female, 7680018388, 18-May-2002...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +127,12 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="f">
-                  </a> <!-- f -->
-                  <span class="method-name">f</span>
+                  <a name="register(Bhushanakumari, Kattupalli, kattupalli.bhushanakumari@qualizeal.com, Female, 7680018388, 18-May-2002...)">
+                  </a> <!-- register(Bhushanakumari, Kattupalli, kattupalli.bhushanakumari@qualizeal.com, Female, 7680018388, 18-May-2002...) -->
+                  <span class="method-name">register</span>
+                  <span class="parameters">(Bhushanakumari, Kattupalli, kattupalli.bhushanakumari@qualizeal.com, Female, 7680018388, 18-May-2002, Computer Science,Hindi,physics, Sports
+Reading
+Music, India, NCR, Delhi)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +140,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\QualiZeal\AppData\Local\Temp\testng-eclipse-488590406\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\QualiZeal\AppData\Local\Temp\testng-eclipse--306770209\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'f')
+data.setCell(0, 1, 'register')
 data.setCell(0, 2, 'com.automationtesting.demo.NewTest')
-data.setCell(0, 3, 5);
+data.setCell(0, 3, 44221);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 ms</span>
+              <span class="suite-total-time">Total running time: 44 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -222,10 +225,18 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.automationtesting.demo.NewTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">f</span>
+              <div class="configuration-class before">
+                <span class="method-name">openBrowser</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">register(Bhushanakumari, Kattupalli, kattupalli.bhushanakumari@qualizeal.com, Female, 7680018388, 18-May-2002...)</span>
+                <span class="method-start">5598 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">49819 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
