--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f385a2">  <td>24/12/24 16:34:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.closeBrowser()[pri:0, instance:com.automationtesting.demo.NewTest@222545dc]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@945591847</td>   <td></td> </tr>
-<tr bgcolor="f385a2">  <td>24/12/24 16:33:22</td>   <td>-49814</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.openBrowser()[pri:0, instance:com.automationtesting.demo.NewTest@222545dc]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@945591847</td>   <td></td> </tr>
-<tr bgcolor="f385a2">  <td>24/12/24 16:33:27</td>   <td>-44221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.register(java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object)[pri:0, instance:com.automationtesting.demo.NewTest@222545dc]">register</td> 
-  <td>main@945591847</td>   <td></td> </tr>
+<tr bgcolor="7362d6">  <td>24/12/26 17:45:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AutomatePracticeForm.closeBrowser()[pri:0, instance:com.automationtesting.demo.AutomatePracticeForm@478190fc]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1051876890</td>   <td></td> </tr>
+<tr bgcolor="7362d6">  <td>24/12/26 17:45:03</td>   <td>-24887</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AutomatePracticeForm.openBrowser()[pri:0, instance:com.automationtesting.demo.AutomatePracticeForm@478190fc]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1051876890</td>   <td></td> </tr>
+<tr bgcolor="7362d6">  <td>24/12/26 17:45:24</td>   <td>-3555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomatePracticeForm.register(java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.String)[pri:0, instance:com.automationtesting.demo.AutomatePracticeForm@478190fc]">register</td> 
+  <td>main@1051876890</td>   <td></td> </tr>
+<tr bgcolor="7362d6">  <td>24/12/26 17:45:24</td>   <td>-3555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomatePracticeForm.register(java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.String)[pri:0, instance:com.automationtesting.demo.AutomatePracticeForm@478190fc]">register</td> 
+  <td>main@1051876890</td>   <td></td> </tr>
+<tr bgcolor="7362d6">  <td>24/12/26 17:45:24</td>   <td>-3555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomatePracticeForm.register(java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.Object,java.lang.String)[pri:0, instance:com.automationtesting.demo.AutomatePracticeForm@478190fc]">register</td> 
+  <td>main@1051876890</td>   <td></td> </tr>
 </table>
